etc/tests/fuzz/errors/ownership/return-local-borrow.nshape
shape ownership-return-local-borrow {
  family "compiler-errors/ownership"
  generator "error"
  features ["error", "ownership", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "returning borrow of local owner 'a' would outlive its slot"
  flags "--ownership-strict"
  source ny <<'NY'
use std.core

@borrows(x)
@returns_borrow(x)
fn peek(x) { x }

fn bad() {
   def a = [1]
   return peek(a)
}

bad()
NY
}
